--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^0.8.0",
     "@types/dotenv": "^8.2.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
