--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "morgan": "^1.10.0",
+    "netlify-cli": "^6.14.19",
     "nodemon": "^2.0.12",
     "typescript": "^4.3.5"
   },
